crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__invalid_task_list.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: "format_parse_error(&source, error)"
---
  × expected table, found string
    ╭─[pixi.toml:10:22]
  9 │             [tasks]
 10 │             test = ["invalid", "task"]
    ·                      ───────
 11 │
    ╰────
