crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__pypi_options_default_feature.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: "WorkspaceManifest::from_toml_str(&contents).expect(\"parsing should succeed!\").workspace.pypi_options.clone().unwrap()"
---
index-url: "https://pypi.org/simple"
extra-index-urls:
  - "https://pypi.org/simple2"
find-links:
  - path: "../foo"
  - url: "https://example.com/bar"
no-build-isolation: ~
index-strategy: ~
no-build: none
