crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__set_channels.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
assertion_line: 3275
expression: manifest.document.to_string()
---
[workspace]
name = "foo"
channels = [{ channel = "high-priority", priority = 10 }, { channel = "low-priority", priority = -5 }]
platforms = ["linux-64", "win-64"]

[feature.cuda]
channels = []
