crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__test_remove_fooz.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: manifest.provenance.document.to_string()
---
            [project]
            name = "foo"
            version = "0.1.0"
            channels = []
            platforms = ["linux-64", "win-64"]

            [target.win-64.dependencies]
            bar = "*"

            [target.linux-64.build-dependencies]
            baz = "*"
